Bug 1184276 - Add some logging and don't bail if we can't find an nsPluginTag in RecvGetBlocklistState to try and get more diagnostic info r=billm